force-app/main/default/objects/Automobile__c/fields/Bought_Via__c.field-meta.xml
<CustomField>
    <fullName>Bought_Via__c</fullName>
    <label>Bought Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Trade In</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>