force-app/main/default/objects/Automobile__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Automobiles Purchased</relationshipLabel>
    <relationshipName>Automobiles_Purchased</relationshipName>
</CustomField>