force-app/main/default/objects/Automobile__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Acura</fullName>
            </value>
            <value>
                <fullName>Lexus</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Scion</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>Subaru</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>Porsche</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Alfa Romeo</fullName>
            </value>
            <value>
                <fullName>Maserati</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>