force-app/main/default/objects/Automobile__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <label>Original Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>