force-app/main/default/objects/Automobile__c/recordTypes/New.recordType-meta.xml
<RecordType>
    <fullName>New</fullName>
    <active>true</active>
    <description>New Automobiles</description>
    <label>New</label>
</RecordType>