force-app/main/default/objects/Automobile__c/recordTypes/Used.recordType-meta.xml
<RecordType>
    <fullName>Used</fullName>
    <active>true</active>
    <description>Used Automobiles</description>
    <label>Used</label>
</RecordType>